Name:             tonic
Version:          0.0.1
Synopsis:         Fast, lazy and simple XML.
Description:      This package is called tonic because it is not.
Category:         Data, Xml, Html
License:          BSD3
License-file:     LICENSE
Author:           Sebastiaan Visser
Maintainer:       haskell@fvisser.nl
Build-Type:       Simple
Cabal-Version:    >= 1.2

Library
  GHC-Options:      -threaded -Wall -O
  HS-Source-Dirs:   src

  Build-Depends:    base         >= 4   && < 5
                  , text         >= 0.9 && < 0.10
                  , monads-fd    >= 0.1 && < 0.2
                  , transformers >= 0.2 && < 0.3

  Exposed-modules:  Xml.Tonic.Types
                    Xml.Tonic.Parser

