Name:             tonic
Version:          0.0.2
Synopsis:         Fast, lazy and simple XML.
Description:      This package is called tonic because it is not.
Category:         Data, Xml, Html
License:          BSD3
License-file:     LICENSE
Author:           Sebastiaan Visser
Maintainer:       haskell@fvisser.nl
Build-Type:       Simple
Cabal-Version:    >= 1.2

Library
  GHC-Options:      -threaded -Wall -O
  HS-Source-Dirs:   src

  Build-Depends:    base         >= 4   && < 5
                  , text         >= 0.9 && < 0.10
                  , mtl          == 2.0.*
                  , arrow-list   == 0.1.*

  Exposed-modules:  Xml.Tonic.Types
                    Xml.Tonic.Parse
                    Xml.Tonic.Print
                    Xml.Tonic.Arrow

Executable          xml-text
  Executable:       xml-text
  Main-is:          Test.hs
  GHC-Options:      -threaded -Wall
  HS-Source-Dirs:   src

