Name:             tonic
Version:          0.0.2
Synopsis:         Fast, lazy and simple XML.
Description:      This package is called tonic because it is not.
Category:         Data, Xml, Html
License:          BSD3
License-file:     LICENSE
Author:           Sebastiaan Visser
Maintainer:       haskell@fvisser.nl
Build-Type:       Simple
Cabal-Version:    >= 1.2

Library
  GHC-Options:     -threaded -Wall -O
  HS-Source-Dirs:  src

  Build-Depends:   base         >= 4 && < 5
                 , ghc-prim
                 , text         == 0.11.*
                 , mtl          == 2.0.*
                 , arrow-list   == 0.5.*

  Other-modules:   Xml.Tonic.Parse
                   Xml.Tonic.Print
                   Xml.Tonic.Transform
  Exposed-modules: Xml.Tonic
                   Xml.Tonic.Arrow
                   Xml.Tonic.Types

